--- a/app/src/main/res/layout/fragment_add_new.xml
+++ b/app/src/main/res/layout/fragment_add_new.xml
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_min"
             android:textSize="16sp"
-            android:hint="Введите номер записи"
+            android:hint="@string/text_title_id_note"
             android:textColorHint="@color/color_hint"
             app:layout_constraintEnd_toEndOf="@id/guideline_end"
             app:layout_constraintHorizontal_bias="0.041"
@@ -67,7 +67,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_min"
             android:textSize="16sp"
-            android:hint="Введите дату"
+            android:hint="@string/text_date_create_note"
             android:textColorHint="@color/color_hint"
             app:layout_constraintEnd_toStartOf="@+id/guideline_end"
             app:layout_constraintHorizontal_bias="0.043"
@@ -95,7 +95,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_min"
             android:textSize="16sp"
-            android:hint="Введите название"
+            android:hint="@string/text_name_note_title"
             android:textColorHint="@color/color_hint"
             app:layout_constraintEnd_toStartOf="@+id/guideline_end"
             app:layout_constraintHorizontal_bias="0.052"
@@ -122,7 +122,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_min"
             android:textSize="16sp"
-            android:hint="Введите описание"
+            android:hint="@string/text_description_title"
             android:textColorHint="@color/color_hint"
             app:layout_constraintEnd_toStartOf="@+id/guideline_end"
             app:layout_constraintHorizontal_bias="0.03"
@@ -181,6 +181,19 @@
             android:scaleType="fitCenter"
             tools:layout_editor_absoluteX="207dp"
             tools:src="@tools:sample/avatars" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button_add"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginBottom="48dp"
+            android:text="@string/text_plus"
+            android:textSize="20sp"
+            app:cornerRadius="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.057"
+            app:layout_constraintStart_toStartOf="@+id/guideline_end" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
