--- a/app/src/main/res/menu/main_toolbar.xml
+++ b/app/src/main/res/menu/main_toolbar.xml
@@ -7,6 +7,11 @@
         android:title="@string/popup_title_share"
         app:showAsAction="never" />
     <item
+        android:id="@+id/action_delete_all"
+        android:orderInCategory="100"
+        android:title="@string/popup_title_delete_all"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_search"
         android:icon="@android:drawable/ic_menu_search"
         android:orderInCategory="5"
